feat(users and global): add ng-until-destroy and also uses storeState$ in component

--- a/libs/feature/user/src/lib/components/users/users.component.html
+++ b/libs/feature/user/src/lib/components/users/users.component.html
@@ -1,1 +1,8 @@
-<p>users works!</p>
+<p class="mat-typography">User.Component works!!!</p>
+<div *ngIf="storeState$ | async as state">
+  <ul>
+    <li *ngFor="let user of state.usersState">
+      {{user.name}}
+    </li>
+  </ul>
+</div>
