feat(user/user-detail): user details are now shown in a form format
Created a form service, now going to migrate the form from component to user-form.service.ts.

--- a/libs/feature/user/src/lib/components/user-detail/user-detail.component.html
+++ b/libs/feature/user/src/lib/components/user-detail/user-detail.component.html
@@ -1,1 +1,34 @@
-<p>user-detail works! {{id}}</p>
+<!--TODO: Ask about state update!-->
+<ng-container *ngIf="(storeState$ | async).userState as user">
+  <h1>{{user.profileName}} Details</h1>
+  <hr/>
+  <form [formGroup]="userDetailForm">
+    <h4>User ID: {{user.id}}</h4>
+    <mat-form-field appearance="outline">
+      <mat-label>First Name</mat-label>
+      <input matInput placeholder="Ex. Karma" formControlName="firstName">
+    </mat-form-field>
+    <br/>
+    <mat-form-field appearance="outline">
+      <mat-label>Last Name</mat-label>
+      <input matInput placeholder="Ex. Yoezer" formControlName="lastName" type="text">
+    </mat-form-field>
+    <br/>
+    <mat-form-field appearance="outline">
+      <mat-label>Profile Name</mat-label>
+      <input matInput placeholder="Ex. Kzoeps" formControlName="profileName" type="text">
+    </mat-form-field>
+    <br/>
+    <mat-form-field appearance="outline">
+      <mat-label>Email</mat-label>
+      <input matInput placeholder="Ex. abc@ab.com" formControlName="email" type="email">
+    </mat-form-field>
+    <br/>
+    <mat-form-field appearance="outline">
+      <mat-label>Role</mat-label>
+      <mat-select [compareWith]="byRole" value="{{user.role}}">
+        <mat-option *ngFor="let role of roles" value="{{role}}">{{role}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </form>
+</ng-container>
