feat(team-detail & add-team.ts): user Facade Service route path. Team-detail view
User-Facade.service now has a route with selise-start as root.team details can now be viewed

--- a/apps/code-auditor/src/app/app.component.html
+++ b/apps/code-auditor/src/app/app.component.html
@@ -1,2 +1,6 @@
-<a routerLink="/users">Users</a>
+<div style="width: 100%; display: flex;justify-content: space-between">
+  <a routerLink="/users">Users</a>
+  <a routerLink="/teams">Teams</a>
+  <a routerLink="/teams/add-team">Add Team</a>
+</div>
 <router-outlet></router-outlet>
