feat(team-state): store has been simplified to contain only teamsState and teamState
Update all of the functions inside add-team and edit-team to use teamState.[whatever value] instead
of using an individual state eg: teamMembers

--- a/libs/feature/team/src/lib/components/add-team/add-team.component.html
+++ b/libs/feature/team/src/lib/components/add-team/add-team.component.html
@@ -44,10 +44,12 @@
       There has to be atleast one team member
     </span>
     <br/>
-    <div *ngIf="(teamState$ | async).teamMembers as teamMemberState">
-      <div *ngFor="let teamMember of teamMemberState" style="margin-top: 20px">
-        {{teamMember.profileName}}
-        <span style="margin-left: 100px" (click)="removeMember(teamMember)"> remove </span>
+    <div *ngIf="(teamState$ | async).teamState as teamState">
+      <div *ngIf="teamState.teamMembers !== undefined">
+        <div *ngFor="let teamMember of teamState.teamMembers" style="margin-top: 20px">
+          {{teamMember.profileName}}
+          <span style="margin-left: 100px" (click)="removeMember(teamMember)"> remove </span>
+        </div>
       </div>
     </div>
     <br/>
