feat(add-audit): able to create audits. Validation has been set as well. Code is Really DIRTY THO!

--- a/apps/code-auditor/src/app/app.component.html
+++ b/apps/code-auditor/src/app/app.component.html
@@ -2,5 +2,6 @@
   <a routerLink="/users">Users</a>
   <a routerLink="/teams">Teams</a>
   <a routerLink="/teams/add-team">Add Team</a>
+  <a routerLink="/audits/add-audit">Add Audit</a>
 </div>
 <router-outlet></router-outlet>
