--- a/libs/feature/team/src/lib/components/add-team/add-team.component.html
+++ b/libs/feature/team/src/lib/components/add-team/add-team.component.html
@@ -1,3 +1,4 @@
+<!--TODO: refactor code to only use on store:  TEAM STORE-->
 <ng-container *ngIf="(users$ | async).usersState as users">
   <h1>Create A Team</h1>
   <hr/>
@@ -16,6 +17,7 @@
     <br/>
     <mat-form-field appearance="outline">
       <mat-label>Team Lead</mat-label>
+<!--      TODO: optimize (ngModelChange) it calls every time there's a change-->
       <mat-select formControlName="teamLead" (ngModelChange)="updateTeamLead()">
         <mat-option *ngFor="let user of users" [value]="user">
           {{user.profileName}}
@@ -37,6 +39,7 @@
     </button>
     </span>
     <br/>
+<!--    TODO: remove == logic from template.-->
     <span *ngIf="addMemberSuccess == false" style="color: red">
       Team Lead Cannot Be A Team Member
     </span>
