feat(audits.component): shows a list of all audits and links them respectively

--- a/apps/code-auditor/src/app/app.component.html
+++ b/apps/code-auditor/src/app/app.component.html
@@ -3,5 +3,6 @@
   <a routerLink="/teams">Teams</a>
   <a routerLink="/teams/add-team">Add Team</a>
   <a routerLink="/audits/add-audit">Add Audit</a>
+  <a routerLink="/audits">Audits</a>
 </div>
 <router-outlet></router-outlet>
