--- a/libs/feature/audit/src/lib/components/edit-audit/edit-audit.component.html
+++ b/libs/feature/audit/src/lib/components/edit-audit/edit-audit.component.html
@@ -66,6 +66,10 @@
       <button mat-flat-button (click)="updateAudit()" color="primary">
         Update
       </button>
+      <h3>Memos</h3>
+      <hr/>
+
+
     </form>
   </span>
 </ng-container>
