--- a/libs/feature/audit/src/lib/components/memo-comp/memo-comp.component.html
+++ b/libs/feature/audit/src/lib/components/memo-comp/memo-comp.component.html
@@ -1,6 +1,16 @@
 <ng-container *ngIf="(auditStoreState$ | async).auditState as audit">
   <h1>Auditee : {{audit.auditee.teamName}}</h1>
-  <form [formGroup]="testForm" style="display: flex; flex-direction: column">
+  <form [formGroup]="auditForm" style="display: flex; flex-direction: column">
+    <mat-form-field appearance="outline">
+      <mat-label>
+        Status
+      </mat-label>
+        <mat-select formControlName="status" [value]="auditForm.controls.status.value">
+          <mat-option *ngFor="let status of statuses" [value]="status">
+            {{status}}
+          </mat-option>
+        </mat-select>
+    </mat-form-field>
     <mat-form-field appearance="outline" style="width: 500px">
       <mat-label>
         Description
@@ -22,8 +32,8 @@
         Add Assignee
       </button>
     </span>
-    <span *ngIf="testForm.controls.createMemoDesignatedAssignees.value">
-        <mat-card *ngFor="let assignee of testForm.controls.createMemoDesignatedAssignees.value"
+    <span *ngIf="auditForm.controls.createMemoDesignatedAssignees.value">
+        <mat-card *ngFor="let assignee of auditForm.controls.createMemoDesignatedAssignees.value"
                   style="display: flex; width: 100%; justify-content: space-between">
           <mat-card-content>
             {{assignee.profileName}}
@@ -41,7 +51,7 @@
       {{memoSuccess}}
     </div>
       <h1>Memos</h1>
-      <span formArrayName="memos" *ngFor="let eachMemo of testForm.controls.memos?.controls; let i = index">
+      <span formArrayName="memos" *ngFor="let eachMemo of auditForm.controls.memos?.controls; let i = index">
         <span [formGroup]="eachMemo">
           <mat-card style="display: flex; flex-direction: column;">
             <mat-card-content>
@@ -109,7 +119,7 @@
       </span>
     <!--    TODO: BIG TIME: make this into its separate components if theres time.-->
       <h1>Resolved</h1>
-      <span formArrayName="resolved" *ngFor="let eachMemo of testForm.controls.resolved?.controls;let i = index">
+      <span formArrayName="resolved" *ngFor="let eachMemo of auditForm.controls.resolved?.controls;let i = index">
         <span [formGroup]="eachMemo">
           <mat-card style="display: flex; flex-direction: column;">
             <mat-card-content>
@@ -177,7 +187,7 @@
         </span>
       </span>
     <h1>TBD</h1>
-    <span formArrayName="tbd" *ngFor="let eachMemo of testForm.controls.tbd?.controls;let i = index">
+    <span formArrayName="tbd" *ngFor="let eachMemo of auditForm.controls.tbd?.controls;let i = index">
 
         <span [formGroup]="eachMemo">
           <mat-card style="display: flex; flex-direction: column;">
