feat(add-user.component): admin can now add users

--- a/apps/code-auditor/src/app/app.component.html
+++ b/apps/code-auditor/src/app/app.component.html
@@ -4,5 +4,6 @@
   <a routerLink="/teams/add-team">Add Team</a>
   <a routerLink="/audits/add-audit">Add Audit</a>
   <a routerLink="/audits">Audits</a>
+  <button (click)="logout()">Logout</button>
 </div>
 <router-outlet></router-outlet>
