feat(nav): nav bar is a seperate component and a lil bit of style changes

--- a/libs/feature/audit/src/lib/components/add-audit/add-audit.component.html
+++ b/libs/feature/audit/src/lib/components/add-audit/add-audit.component.html
@@ -1,3 +1,4 @@
+<selise-start-nav></selise-start-nav>
 <ng-container *ngIf="auditState$ | async as auditStoreState">
   <h1>Create an Audit</h1>
   <hr/>
