--- a/libs/feature/audit/src/lib/components/audit-detail/audit-detail.component.html
+++ b/libs/feature/audit/src/lib/components/audit-detail/audit-detail.component.html
@@ -1,3 +1,4 @@
+<selise-start-nav></selise-start-nav>
 <ng-container *ngIf="(auditStoreState$ | async).auditState as audit">
   <h1>Auditee: {{audit.auditee.teamName | titlecase}} Details</h1>
   <hr/>
