--- a/libs/feature/audit/src/lib/components/audits/audits.component.html
+++ b/libs/feature/audit/src/lib/components/audits/audits.component.html
@@ -1,3 +1,4 @@
+<selise-start-nav></selise-start-nav>
 <ng-container *ngIf="(auditStoreState$ | async).auditsState as audits">
   <h3>List Of All Audits</h3>
   <hr/>
