--- a/libs/feature/auth/src/lib/components/login/login.component.html
+++ b/libs/feature/auth/src/lib/components/login/login.component.html
@@ -17,4 +17,8 @@
   <button mat-flat-button color="primary" (click)="login()">
     Login
   </button>
+  <h1>OR</h1>
+  <button mat-flat-button color="primary" routerLink="/auth/signup">
+    Sign-Up
+  </button>
 </form>
