--- a/libs/feature/auth/src/lib/components/signup/signup.component.html
+++ b/libs/feature/auth/src/lib/components/signup/signup.component.html
@@ -43,4 +43,8 @@
   <button mat-flat-button color="primary" (click)="register()">
     Register
   </button>
+  <h1>OR</h1>
+  <button mat-flat-button color="primary" routerLink="/auth/login">
+    Login
+  </button>
 </form>
