--- a/libs/feature/team/src/lib/components/edit-team/edit-team.component.html
+++ b/libs/feature/team/src/lib/components/edit-team/edit-team.component.html
@@ -1,3 +1,4 @@
+<selise-start-nav></selise-start-nav>
 <ng-container *ngIf="(team$ | async).teamState as team">
   <ng-container *ngIf="(users$ | async).usersState as users">
     <h1>{{team.teamName | titlecase}} Details</h1>
