--- a/libs/feature/user/src/lib/components/add-user/add-user.component.html
+++ b/libs/feature/user/src/lib/components/add-user/add-user.component.html
@@ -1,3 +1,4 @@
+<selise-start-nav></selise-start-nav>
 <h1>Add User</h1>
 <form [formGroup]="addUserForm" style="display: flex;flex-direction: column">
   <mat-form-field appearance="outline">
