--- a/libs/feature/user/src/lib/components/admin-approval/admin-approval.component.html
+++ b/libs/feature/user/src/lib/components/admin-approval/admin-approval.component.html
@@ -1,3 +1,4 @@
+<selise-start-nav></selise-start-nav>
 <h1>Pending User Approval</h1>
 <span *ngIf="(usersStoreState | async).usersState as users">
   <ul>
