--- a/libs/feature/user/src/lib/components/user-detail/user-detail.component.html
+++ b/libs/feature/user/src/lib/components/user-detail/user-detail.component.html
@@ -1,4 +1,4 @@
-<!--TODO: Ask about state update!-->
+<selise-start-nav></selise-start-nav>
 <ng-container *ngIf="(storeState$ | async).userState as user">
   <div style="display: flex; justify-content: space-between; width: 100%">
     <h1>{{user.profileName | titlecase}} Details</h1>
