--- a/libs/feature/user/src/lib/components/users/users.component.html
+++ b/libs/feature/user/src/lib/components/users/users.component.html
@@ -1,4 +1,4 @@
-<p class="mat-typography">User.Component works!!!</p>
+<selise-start-nav></selise-start-nav>
 <div *ngIf="storeState$ | async as state">
   <ul>
     <li *ngFor="let user of state.usersState">
