--- a/libs/feature/team/src/lib/components/add-team/add-team.component.html
+++ b/libs/feature/team/src/lib/components/add-team/add-team.component.html
@@ -1,5 +1,5 @@
-<!--TODO: refactor code to only use on store:  TEAM STORE-->
-<ng-container *ngIf="(users$ | async).usersState as users">
+<selise-start-nav></selise-start-nav>
+<ng-container *ngIf="users">
   <h1>Create A Team</h1>
   <hr/>
   <form [formGroup]="addTeamForm">
