--- a/libs/feature/team/src/lib/components/team-detail/team-detail.component.html
+++ b/libs/feature/team/src/lib/components/team-detail/team-detail.component.html
@@ -1,3 +1,4 @@
+<selise-start-nav></selise-start-nav>
 <ng-container *ngIf="(team$ | async).teamState as team">
   <h1>{{team.teamName | titlecase}} Details</h1>
   <hr/>
