--- a/libs/feature/team/src/lib/components/teams/teams.component.html
+++ b/libs/feature/team/src/lib/components/teams/teams.component.html
@@ -1,3 +1,4 @@
+<selise-start-nav></selise-start-nav>
 <ng-container *ngIf="(team$ | async).teamsState as teams">
   <h3>List of all teams</h3>
   <hr/>
