--- a/libs/feature/auth/src/lib/components/login/login.component.html
+++ b/libs/feature/auth/src/lib/components/login/login.component.html
@@ -1,24 +1,25 @@
-<h1>
+<div *ngIf="unAuthenticated"><h1>
   Login
 </h1>
-<form [formGroup]="loginForm" style="display: flex; flex-direction: column">
-  <mat-form-field appearance="outline">
-    <mat-label>
-      Email
-    </mat-label>
-    <input matInput placeholder="Ex. abc@abc.com" formControlName="email">
-  </mat-form-field>
-  <mat-form-field appearance="outline">
-    <mat-label>
-      Password
-    </mat-label>
-    <input matInput type="password" formControlName="password">
-  </mat-form-field>
-  <button mat-flat-button color="primary" (click)="login()">
-    Login
-  </button>
-  <h1>OR</h1>
-  <button mat-flat-button color="primary" routerLink="/auth/signup">
-    Sign-Up
-  </button>
-</form>
+  <form [formGroup]="loginForm" style="display: flex; flex-direction: column">
+    <mat-form-field appearance="outline">
+      <mat-label>
+        Email
+      </mat-label>
+      <input matInput placeholder="Ex. abc@abc.com" formControlName="email">
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>
+        Password
+      </mat-label>
+      <input matInput type="password" formControlName="password">
+    </mat-form-field>
+    <button mat-flat-button color="primary" (click)="login()">
+      Login
+    </button>
+    <h1>OR</h1>
+    <button mat-flat-button color="primary" routerLink="/auth/signup">
+      Sign-Up
+    </button>
+  </form>
+</div>
