--- a/libs/feature/auth/src/lib/components/login/login.component.html
+++ b/libs/feature/auth/src/lib/components/login/login.component.html
@@ -1,7 +1,9 @@
-<div *ngIf="unAuthenticated"><h1>
-  Login
-</h1>
+<div *ngIf="unAuthenticated">
+  <h1>
+    Login
+  </h1>
   <form [formGroup]="loginForm" style="display: flex; flex-direction: column">
+    <span *ngIf="error" style="color: red">{{error}}</span>
     <mat-form-field appearance="outline">
       <mat-label>
         Email
