feat(edit-team): teammembers and deleted teaam members are all updated on update

--- a/libs/feature/team/src/lib/components/edit-team/edit-team.component.html
+++ b/libs/feature/team/src/lib/components/edit-team/edit-team.component.html
@@ -1,6 +1,6 @@
 <selise-start-nav></selise-start-nav>
 <ng-container *ngIf="(team$ | async).teamState as team">
-  <ng-container *ngIf="(users$ | async).usersState as users">
+  <ng-container *ngIf="users">
     <h1>{{team.teamName | titlecase}} Details</h1>
     <hr/>
     <form [formGroup]="editTeamForm" style="display: flex; flex-direction: column">
