--- a/libs/feature/team/src/lib/components/team-detail/team-detail.component.html
+++ b/libs/feature/team/src/lib/components/team-detail/team-detail.component.html
@@ -1,6 +1,11 @@
 <selise-start-nav></selise-start-nav>
 <ng-container *ngIf="(team$ | async).teamState as team">
-  <h1>{{team.teamName | titlecase}} Details</h1>
+  <div style="display: flex; justify-content: space-between">
+    <h1>{{team.teamName | titlecase}} Details</h1>
+    <button mat-flat-button color="primary" style="width: 150px; height: 45px; margin-top: 30px;" routerLink="/teams/{{team.id}}/edit-team">
+      Edit
+    </button>
+  </div>
   <hr/>
   <div>
     <div style="display: flex; width: 400px; justify-content: space-between">
