feat(app-config/environment): base url is now imported from environment
Added an app config library to bypass nx enforce module boundaries error

--- a/libs/feature/audit/src/lib/components/memo-comp/memo-comp.component.html
+++ b/libs/feature/audit/src/lib/components/memo-comp/memo-comp.component.html
@@ -219,7 +219,7 @@
                   Move
                 </button>
               </span>
-              <div *ngIf="eachMemo.get('description').hasError('required')" style="color: red">
+              <div *ngIf="eachMemo.get('description').hasError('required')" style="color: #ff0000">
                 Description is required
               </div>
               <span style="display: flex; justify-content: space-between">
